adjust spacing and fix alignment of parent items

--- a/packages/site/src/layout/NavMenu.module.css
+++ b/packages/site/src/layout/NavMenu.module.css
@@ -34,7 +34,6 @@
 .navMenuItem {
   align-items: center;
   display: flex;
-  margin: var(--space-smaller) 0;
   min-height: 40px;
   overflow-wrap: anywhere;
   transition: all var(--timing-base) ease-out;
@@ -45,7 +44,7 @@
   color: var(--color-text);
   outline: transparent;
   text-decoration: none;
-  padding: 0;
+  padding: 0 var(--space-smallest);
 
   &:visited {
     color: var(--color-text);
@@ -64,4 +63,6 @@
 
 .navMenuSubTitle {
   min-height: 24px;
+  padding: var(--space-smaller) 0;
+  align-items: end;
 }
